# GCM2

./: .gitignore  README.md  RUN_RESULTS.md  pyproject.toml  requirements.txt
afes_venus_jax/: __init__.py  config.py  diagnostics.py  diffusion.py  grid.py  implicit.py  io_utils.py  physics.py  spharm.py  state.py  tendencies.py  timestep.py  vertical.py
afes_venus_jax/examples/: t42l60_venus_dry_diurnal.py  t42l60_venus_dry_spinup.py  t42l60_venus_spinup.py
afes_venus_jax/tests/: conftest.py  test_diffusion.py  test_diffusion_tau.py  test_example_run.py  test_operators.py  test_si_linear.py  test_si_step.py  test_smoke_t42l60.py  test_stability_t42l60.py  test_stability_unjitted_t42.py  test_transforms.py
