[project]
name = "afes_venus_jax"
version = "0.1.0"
description = "AFES-Venus style hydrostatic primitive-equation spectral core in JAX"
authors = [{name = "OpenAI", email = "example@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "numpy",
    "scipy",
    "xarray",
    "netcdf4",
    "s2fft>=4.0.0",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
