[project]
name = "afes_venus_jax"
version = "0.1.0"
description = "AFES-Venus style hydrostatic primitive-equation spectral core in JAX"
authors = [{name = "OpenAI", email = "example@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "numpy",
    "scipy",
    "xarray",
    "netcdf4",
    "s2fft==1.3.0",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
